package es.ull.patrones.pattern;

import javax.swing.*;

public interface EventListener {
    JTextArea update(WeatherData weatherData);
}
