@startuml

title __PATTERN's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.ConcreteListener {
          ~ textArea : JTextArea
          + update()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      interface es.ull.patrones.pattern.EventListener {
          {abstract} + update()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.EventManager {
          ~ listeners : ArrayList<EventListener>
          + EventManager()
          + notifyUpdate()
          + remove()
          + subscribe()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.WeatherData {
          ~ ID : int
          ~ base : String
          ~ code : int
          ~ dt : int
          ~ name : String
          ~ timeZone : int
          ~ visibility : int
          + WeatherData()
          + getBase()
          + getClouds()
          + getCode()
          + getCoordinate()
          + getDt()
          + getID()
          + getMain()
          + getName()
          + getSys()
          + getTimeZone()
          + getVisibility()
          + getWeather()
          + getWind()
          + setBase()
          + setClouds()
          + setCode()
          + setCoordinate()
          + setDt()
          + setID()
          + setMain()
          + setName()
          + setSys()
          + setTimeZone()
          + setVisibility()
          + setWeather()
          + setWind()
          + showWeatherData()
      }
    }
  }
  

  es.ull.patrones.pattern.ConcreteListener .up.|> es.ull.patrones.pattern.EventListener
  es.ull.patrones.pattern.EventManager o-- es.ull.patrones.pattern.WeatherData : weatherData
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Cloud : clouds
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Coordinate : coordinate
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.MainW : main
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.SystemW : sys
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Weather : weather
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Wind : wind


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
